unpackaged/main/default/objects/Account/fields/cont__c.field-meta.xml
<CustomField>
    <fullName>cont__c</fullName>
    <label>cont</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>