unpackaged/main/default/objects/Account/fields/Delete_this_Account__c.field-meta.xml
<CustomField>
    <fullName>Delete_this_Account__c</fullName>
    <label>Delete this Account</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>YES</fullName>
            </value>
            <value>
                <fullName>NO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>