unpackaged/main/default/objects/Account/fields/Doctor_Bill__c.field-meta.xml
<CustomField>
    <fullName>Doctor_Bill__c</fullName>
    <label>Doctor Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>