unpackaged/main/default/objects/Account/fields/Lab_Bill__c.field-meta.xml
<CustomField>
    <fullName>Lab_Bill__c</fullName>
    <label>Lab Bill</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>