unpackaged/main/default/objects/Account/fields/sample__c.field-meta.xml
<CustomField>
    <fullName>sample__c</fullName>
    <formula>UPPER(Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sample</label>
    <type>Text</type>
</CustomField>