unpackaged/main/default/objects/Account/fields/Sample_Text__c.field-meta.xml
<CustomField>
    <fullName>Sample_Text__c</fullName>
    <formula>UPPER(Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Text</label>
    <type>Text</type>
</CustomField>