unpackaged/main/default/objects/Account/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <displayFormat>P-{0000}</displayFormat>
    <label>Student</label>
    <type>AutoNumber</type>
</CustomField>