unpackaged/main/default/objects/Account/fields/test__c.field-meta.xml
<CustomField>
    <fullName>test__c</fullName>
    <label>test</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>