unpackaged/main/default/objects/Account/fields/To_Populate_picklist_Value__c.field-meta.xml
<CustomField>
    <fullName>To_Populate_picklist_Value__c</fullName>
    <formula>IF(ISPICKVAL( Rating , &#39;Cold&#39;), &quot;&quot;+Name+ &quot;your selected &quot;, IF(ISPICKVAL(Rating , &#39;Warm&#39;) , &quot;&quot;+Name+ &quot;your selected&quot;, IF( ISPICKVAL(Rating , &#39;Hot&#39;) ,&quot;&quot;+Name+  &quot;Your selected &quot; , NULL) ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Populate picklist Value</label>
    <type>Text</type>
</CustomField>