unpackaged/main/default/objects/Account/recordTypes/master5.recordType-meta.xml
<RecordType>
    <fullName>master5</fullName>
    <active>true</active>
    <label>master5</label>
</RecordType>