unpackaged/main/default/objects/Account/validationRules/Based_on_text_field_to_visible_picklist.validationRule-meta.xml
<ValidationRule>
    <fullName>Based_on_text_field_to_visible_picklist</fullName>
    <active>false</active>
    <errorConditionFormula>AND( ISPICKVAL( Rating , &quot; &quot;) , Sample_Text__c=&quot; &quot; )</errorConditionFormula>
    <errorMessage>To check the sample text field</errorMessage>
</ValidationRule>