unpackaged/main/default/objects/Account/validationRules/TestPhone.validationRule-meta.xml
<ValidationRule>
    <fullName>TestPhone</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
     OR( ISPICKVAL( Rating , &#39;Hot&#39;),
      ISPICKVAL( Rating , &#39;Warm&#39;)) 
)</errorConditionFormula>
    <errorDisplayField>Rating</errorDisplayField>
    <errorMessage>please enter  different picklist to choose for another options.</errorMessage>
</ValidationRule>